--- a/style.css
+++ b/style.css
@@ -23,6 +23,7 @@ body {
 .main-container h1 {
   color: white;
   font-weight: 500;
+  text-align: center;
 }
 
 .main-container p {
@@ -31,6 +32,7 @@ body {
 }
 
 .btn {
+  float: right;
   background: white;
   border: none;
   padding: 10px 20px;
@@ -40,7 +42,7 @@ body {
 
 .btn:hover {
   background: green;
-    color: white;
+  color: white;
 }
 
 .trailer-container {
@@ -65,8 +67,10 @@ body {
 
 .trailer-container video {
   position: relative;
-  max-width: 900px;
+  max-width: 700px;
+  max-height: 600px;
   outline: none;
+  border-radius: 10px;
 }
 
 @media (max-width: 991px) {
